tests/ui/take_self_method.stderr
Error [E0121]: `b` was given away earlier, so it can't be used here
  --> tests/ui/take_self_method.jet:12:11
    |
 12 |     print(b.n);
    |           ^
 Why: after a value moves somewhere else, the old name no longer holds it
 Fix: give away a copy instead (`b.clone()`) where it moved
